HelloWorld/force-app/main/default/objects/Citizenship__c/Citizenship__c.object-meta.xml
<CustomObject>
    <label>Citizenship</label>
    <nameField>
        <displayFormat>CZID-{000000}</displayFormat>
        <label>Citizenship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Citizenships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>