HelloWorld/force-app/main/default/objects/Citizenship__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By birth</fullName>
            </value>
            <value>
                <fullName>By descent</fullName>
            </value>
            <value>
                <fullName>By Registration</fullName>
            </value>
            <value>
                <fullName>By naturalization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>