HelloWorld/force-app/main/default/objects/Citizenship__c/fields/Count_of_record__c.field-meta.xml
<CustomField>
    <fullName>Count_of_record__c</fullName>
    <label>Count of record</label>
    <summaryForeignKey>Applicant_Citizenship__c.Citizenship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>